--- a/src/citra_qt/configuration/configure_enhancements.ui
+++ b/src/citra_qt/configuration/configure_enhancements.ui
@@ -240,6 +240,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QCheckBox" name="toggle_disk_cache">
+        <property name="text">
+         <string>Reduce Stuttering by Saving Shaders to Disk</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_6">
         <item>
          <widget class="QLabel" name="bg_label">
